--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-project-template",
   "version": "2.0.0",
-  "description": "NPM basics",
+  "description": "",
   "homepage": "https://demian-pashkovskyi.github.io/goit-js-hw-08/",
   "scripts": {
     "dev": "parcel src/*.html",
