--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "tar": "^6.1.11"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
     "@parcel/transformer-sass": "^2.6.0",
     "parcel": "^2.6.0",
+    "parcel-bundler": "^1.12.5",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "main": "index.js"
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
