--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "parcel": "^2.6.0",
     "parcel-bundler": "^1.12.5",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "sass": "^1.52.2"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
